aregle la ruta y el nombre de la base de datos

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "sqlConnection": "Data Source = \\Data/P1-Ap-LohammyVasquez.db"
+        "sqlConnection": "Data Source = Data//P1_Ap_LohammyVasquez.Db"
     },
     "Logging": {
         "LogLevel": {
