--- a/P1_Ap1_LohammyVasquez.csproj
+++ b/P1_Ap1_LohammyVasquez.csproj
@@ -20,4 +20,10 @@
     <Folder Include="Data\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Data\P1_Ap_LohammyVasquez.Db">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
